--- a/gateway/requirements.txt
+++ b/gateway/requirements.txt
@@ -2,6 +2,11 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic
 python-multipart==0.0.6
+alembic
+sqlalchemy
+passlib
+jose
+psycopg2-binary
 
 # Google Cloud & Firebase
 google-cloud-firestore==2.13.1
