--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -24,12 +24,12 @@ services:
     container_name: sahayak-gateway
     command: >
       sh -c "alembic upgrade head &&
-             uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+             uvicorn main:app --host ${HOST} --port ${PORT} --reload"
     depends_on:
       sahayak-db:
         condition: service_healthy
     ports:
-      - "8000:8000"
+      - "${PORT}:${PORT}"
     env_file:
       - .env
     volumes:
